--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,71 @@
     /* border: 1px solid black; */
 }
 
+#belt {
+    display: inline;
+    position: absolute;
+    left: 50%;
+    margin-left: -50px;
+
+}
+
 header {
     margin-top: 20px;
-    margin-bottom: 0px;
+    margin-bottom: 40px;
     font-size: 30px;
     text-align: center;
+}
+
+#navbar {
+
+    display: flex;
+    height: 80px;
+    justify-content: space-evenly;
+    margin: 0 auto 0 auto;
+    width: 80px;
+    z-index: 5;
+    position: fixed;
+    left: 25px;
+    top: 25px;
+
+}
+
+.navElement {
+    background-color: white;
+    width: 78px;
+    border: 2px solid black;
+    border-radius: 100px;
+    cursor: pointer;
+
+}
+
+.navElement:hover {
+    transform: translateY(-5px) translateX(-5px);
+    box-shadow: 3px 3px;
+    transition-duration: 400ms;
+}
+
+#home a {
+    cursor: pointer;
+
+}
+
+#home>a>svg {
+    margin-top: 11px;
+    margin-left: 1px;
 }
 
 #subtitle {
     font-size: 20px;
 }
 
+fieldset {
+    border: 0;
+    margin-top: 120px;
+}
+
 #pickText {
-    margin: 100px auto 40px auto;
+    margin: 40px auto 40px auto;
     text-align: center;
     font-size: 30px;
 }
@@ -28,28 +80,47 @@ header {
     justify-content: space-around;
     max-width: 1200px;
     margin: 0 auto 0 auto;
-    padding-right: 10px;
+    padding-right: 30px;
     padding-left: 30px;
     flex-wrap: wrap;
 }
 
+.selectionContainer {
+    padding: 0 10px 0 10px;
+    margin-bottom: 25px;
+}
+
 .selection {
     width: 300px;
-    border: 1px solid black;
+    border: 2px solid black;
     height: 300px;
     margin-bottom: 40px;
     cursor: pointer;
-    margin-right: 20px;
     border-radius: 5px;
 }
+
 .selection:hover {
     transform: scale(1.1)
 }
-.selection:hover + .selectionText {
-    transform:translateY(11px)
+
+.selection:hover+.selectionText {
+    transform: translateY(11px)
 }
+
 .selectionText {
     margin-top: -25px;
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 0px;
+}
+
+@media only screen and (max-width: 700px) {
+    fieldset {
+        margin-top: 0;
+    }
+
+    #navbar {
+        position: sticky;
+        top: 10px;
+        margin-right: 25px;
+    }
 }
