--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,17 @@
     padding: 0;
     transition-duration: 500ms;
     cursor: default;
+    font-family: "Noto Serif JP", serif;
+    /*"Noto Sans JP", sans-serif*/
     /* border: 1px solid black; */
+}
+footer{
+    margin-bottom: 1px;
+    font-size: 10px;
+}
+
+body {
+    background-color: #e2dcd3;
 }
 
 #belt {
@@ -12,6 +22,12 @@
     left: 50%;
     margin-left: -50px;
 
+}
+
+.wiggle {
+    animation-name: wiggle;
+    animation-duration: 1.2s;
+    animation-iteration-count: 1;
 }
 
 header {
@@ -23,11 +39,12 @@ header {
 
 #navbar {
 
-    display: flex;
+    display: none;
+    flex-direction: row;
     height: 80px;
     justify-content: space-evenly;
     margin: 0 auto 0 auto;
-    width: 80px;
+    width: 250px;
     z-index: 5;
     position: fixed;
     left: 25px;
@@ -38,9 +55,11 @@ header {
 .navElement {
     background-color: white;
     width: 78px;
+    height: 80px;
     border: 2px solid black;
     border-radius: 100px;
     cursor: pointer;
+    z-index: 6;
 
 }
 
@@ -48,6 +67,11 @@ header {
     transform: translateY(-5px) translateX(-5px);
     box-shadow: 3px 3px;
     transition-duration: 400ms;
+}
+
+#backBtn>a>svg {
+    margin-top: 11px;
+    margin-left: 10px;
 }
 
 #home a {
@@ -97,6 +121,7 @@ fieldset {
     margin-bottom: 40px;
     cursor: pointer;
     border-radius: 5px;
+    background-color: white;
 }
 
 .selection:hover {
@@ -113,14 +138,58 @@ fieldset {
     margin-bottom: 0px;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 900px) {
     fieldset {
-        margin-top: 0;
+        margin-top: -100px;
     }
 
     #navbar {
+        display: flex;
         position: sticky;
         top: 10px;
         margin-right: 25px;
+        flex-direction: column;
+        width: 80px;
+        height: 200px;
+    }
+
+    .navElement {
+        height: 80px;
+        position: relative;
+        width: 80px;
+    }
+
+    .wiggle {
+        animation-name: none;
+    }
+
+    #belt {
+        animation-name: wiggleMobile;
+        animation-duration: 5s;
+        animation-iteration-count: infinite;
+    }
+    
+
+}
+
+@keyframes wiggle {
+    35% {
+        transform: rotate(-20deg);
+    }
+
+    70% {
+        transform: rotate(20deg);
+    }
+}
+@keyframes wiggleMobile {
+    10% {
+        transform: rotate(-20deg);
+    }
+
+    20% {
+        transform: rotate(20deg);
+    }
+    30% {
+        transform: rotate(0deg);
     }
 }
