--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,13 @@
     /*"Noto Sans JP", sans-serif*/
     /* border: 1px solid black; */
 }
+
 footer{
     margin-bottom: 1px;
     font-size: 10px;
 }
+
+
 
 body {
     background-color: #e2dcd3;
@@ -138,6 +141,25 @@ fieldset {
     margin-bottom: 0px;
 }
 
+#textContainer {
+    display: none;
+    max-width: 800px;
+    margin: 160px auto 0 auto;
+    /* border: 1px solid black; */
+    height: 800px;
+    border-top: 10px solid black;
+    border-radius: 5px;
+}
+#textContainer article {
+    width: 100%;
+    padding: 10px;
+    margin-top: 40px;
+}
+article h1 {
+    text-align: center;
+    font-size: 30px;
+}
+
 @media only screen and (max-width: 900px) {
     fieldset {
         margin-top: -100px;
@@ -171,6 +193,9 @@ fieldset {
     
 
 }
+.hide {
+    display: none;
+}
 
 @keyframes wiggle {
     35% {
@@ -193,3 +218,5 @@ fieldset {
         transform: rotate(0deg);
     }
 }
+
+
