--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
     /* border: 1px solid black; */
 }
 
-footer{
+footer {
     margin-bottom: 1px;
     font-size: 10px;
 }
@@ -141,20 +141,32 @@ fieldset {
     margin-bottom: 0px;
 }
 
+#container {
+    margin: 160px auto 0 auto;
+    display: flex;
+    justify-content: center;
+    max-width: 800px;
+}
+
 #textContainer {
     display: none;
-    max-width: 800px;
-    margin: 160px auto 0 auto;
+    width: 800px;
+    margin: 20px;
     /* border: 1px solid black; */
     height: 800px;
+    border: 1px solid black;
     border-top: 10px solid black;
-    border-radius: 5px;
+    border-bottom: 10px solid black;
+    border-radius: 10px;
+    background-color: white;
 }
+
 #textContainer article {
     width: 100%;
     padding: 10px;
-    margin-top: 40px;
+    margin-top: 20px;
 }
+
 article h1 {
     text-align: center;
     font-size: 30px;
@@ -168,17 +180,22 @@ article h1 {
     #navbar {
         display: flex;
         position: sticky;
-        top: 10px;
-        margin-right: 25px;
+        margin-top: -100px;
+        margin-right: 5px;
         flex-direction: column;
         width: 80px;
         height: 200px;
+        margin-bottom: 100px;
     }
 
     .navElement {
         height: 80px;
         position: relative;
         width: 80px;
+    }
+
+    #container {
+        margin-top: -110px;
     }
 
     .wiggle {
@@ -190,9 +207,10 @@ article h1 {
         animation-duration: 5s;
         animation-iteration-count: infinite;
     }
-    
+
 
 }
+
 .hide {
     display: none;
 }
@@ -206,6 +224,7 @@ article h1 {
         transform: rotate(20deg);
     }
 }
+
 @keyframes wiggleMobile {
     10% {
         transform: rotate(-20deg);
@@ -214,9 +233,8 @@ article h1 {
     20% {
         transform: rotate(20deg);
     }
+
     30% {
         transform: rotate(0deg);
     }
 }
-
-
